# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Applied patch to the ssl-cert script that adds support for getting SSL
  certificates from FTP servers. [Matt Selsky]

o [NSE] Added the a Vuze library, port probe and the script vuze-dht-info. The
  script connects to a Vuze node and gets protocol, vendor and network
  information. [Patrik]

o [Nping] The --safe-payloads option is now default. Added --include-payloads
  for special situations. [Colin Rice]

o [NSE] Added the script reverse-index that creates creates a reverse index
  showing which hosts run a particular service rather than the services for
  each host. [Patrik]

o [NSE] Added whitelist capabilities to the unusual-port script to be able
  to handle legitimate services on dynamic ports and discrepancies between
  names of services. [Patrik]

o [NSE] Added the script unusual-port that compares a detected service on a
  port against the expected service listed in nmap-services [Patrik]

o [NSE] Added the script broadcast-sybase-asa-discover that discovers Sybase
  SQL Anywhere servers on the LAN. [Patrik]

o Added a probe for Sybase SQL Anywhere. [Patrik]

o [NSE] Added maxdb-info script that tries to enumerate version and database
  information from a SAP MaxDB database [Patrik]

o [NSE] Added nexpose-brute a script that performs password auditing against
  the Nexpose vulnerability scanner. [Vlatko Kosturjak]

o [NSE] Added http-vuln-cve2011-3368 a script that attempts to detect whether
  the remote web server is vulnerable to the Apache reverse proxy bypass
  vulnerability CVE-2011-3368. [Ange Gutek, Patrik]

o [NSE] Added new functionality and fixed some bugs in the brute library:
  - Added support for restricting the amount of guesses performed by the
    brute library against users, to prevent account lockouts.
  - Added support to guess the username as password as incorrectly
    suggested as default behavior by the documentation.
  - Added support to guess an empty string as password if not present